--- a/pages/pusher/pusher.wxml
+++ b/pages/pusher/pusher.wxml
@@ -24,11 +24,11 @@
         <cover-view class='text-view'>翻转</cover-view>
       </cover-view>
       <cover-view wx:if="{{show}}" class='img-box'>
-        <cover-image class='img-view' src='{{img}}{{beauty > 0? "beauty" : "beauty-dis"}}.png' bindtap="pause"></cover-image>
+        <cover-image class='img-view' src='{{img}}start.png' bindtap="pause"></cover-image>
         <cover-view class='text-view'>暂停</cover-view>
       </cover-view>
       <cover-view class='img-box'>
-        <cover-image class='img-view' src='{{img}}{{muted ? "mic-dis" : "mic"}}.png' bindtap="resume"></cover-image>
+        <cover-image class='img-view' src='{{img}}suspend.png' bindtap="resume"></cover-image>
         <cover-view class='text-view'>恢复</cover-view>
       </cover-view> 
         <!-- <cover-view class='img-box'>
