--- a/pages/collect/collect.wxml
+++ b/pages/collect/collect.wxml
@@ -10,7 +10,7 @@
     <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>关注</view>
     <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>足迹</view>
   </view>
-<swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
+<swiper current="{{currentData}}" class='swiper' duration="300" bindchange="bindchange">
   <swiper-item>
     <view class='swiper_con'>
       <view wx:for='{{list.collect}}' class='tm'>
