--- a/pages/collect/collect.wxss
+++ b/pages/collect/collect.wxss
@@ -11,11 +11,16 @@
 .topTabSwiper{ border-bottom: 1rpx solid #ccc; zoom: 1;margin-top: 20rpx;}
 .topTabSwiper:after{content: ""; clear: both;display: block;}
 .tabBorer{border-bottom: 6rpx solid orange; color: orange;}
-.swiper{width: 100%;}
+.swiper{width: 100%;height: auto !important;min-height: 600px;}
+.swiper swiper-item{
+  overflow: auto !important;
+  height: auto !important;
+}
 .swiper_con{ 
   width: 100%;
   height: 100%;
-  overflow: hidden;padding: 0 10rpx;box-sizing: border-box;
+  overflow: auto;
+  padding: 0 10rpx;box-sizing: border-box;
 }
 .hezi1 image{
   background-color:#f0f0f0;
