--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,7 +1,7 @@
-
+<block wx:if='{{loadingComplate == 1}}'>
 <view class='video_top'>
   <view class='video_tit'>免费视频</view>
-  <view class='video_more'><navigator url=''>更多</navigator></view>
+  <view class='video_more'><navigator url='../videolist/videolist'>更多</navigator></view>
 </view>
 <view class='allshow'>
   <view class='showdetail' wx:for='{{allList.free_video_list}}'>
@@ -16,7 +16,7 @@
 </view>
 <view class='video_top'>
   <view class='video_tit'>收费视频</view>
-  <view class='video_more'><navigator url=''>更多</navigator></view>
+  <view class='video_more'><navigator url='../videolist/videolist'>更多</navigator></view>
 </view>
 <view class='allshow'>
   <view class='showdetail' wx:for='{{allList.charge_video_list}}'>
@@ -29,3 +29,4 @@
       </navigator>
   </view>
 </view>
+</block>
