--- a/pages/collect/collect.wxss
+++ b/pages/collect/collect.wxss
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  padding: 0 10rpx;box-sizing: border-box;
+  padding: 0 10rpx 50rpx;box-sizing: border-box;
 }
 .hezi1 image{
   background-color:#f0f0f0;
