--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -18,7 +18,7 @@
       <view class='bt-det' wx:key="*this" wx:for="{{allList.startTimeList}}">
         <navigator url='../player/player?id={{item.openId}}'>
           <view class='bt-img'>
-            <image src="{{item.avatarUrl}}"></image>
+            <image src="{{item.thumb}}"></image>
           </view>
           <view class='bt-txt'>
             <text class='bt-txt-tit'>{{item.roomName}}</text>
@@ -38,7 +38,7 @@
     <view class='bt-list'>
       <view class='rm-det' wx:key="*this" wx:for="{{allList.hotList}}">
         <navigator url='../player/player?id={{item.openId}}'>
-          <image class='rm-img' src='{{item.avatarUrl}}'></image>
+          <image class='rm-img' src='{{item.thumb}}'></image>
           <text class='rm-txt-tit'>{{item.nickName}}</text>
           <text class='rm-txt-con'>{{item.roomName}}</text>
         </navigator>
