--- a/pages/player/player.wxss
+++ b/pages/player/player.wxss
@@ -86,11 +86,11 @@ live-player {
   float: left;width: 90rpx;height: 90rpx;
   border-radius: 50%;margin-right: 20rpx;
 }
-.follow-left cover-view{
-  float: left;
+.follow-tit{
+  float: left;width: 60%;
 }
 .follow-left cover-view cover-view{
-  display: block;font-size: 28rpx;width: 65%;
+  display: block;font-size: 28rpx;
 }
 .follow-left cover-view cover-view:nth-child(1){
   font-weight: bold;margin: 10rpx 0;
